# SuckCode

./: README.md  requirements.txt
suckcode/: __init__.py  __main__.py  config.py  context.py  db.py  images.py  mcp.py  permissions.py  pyproject.toml  run.py  suckcode.py  tools.py  ui.py  watcher.py
